src/test/ui/type-alias-impl-trait/issue-63279.stderr
error[E0277]: expected a `FnOnce<()>` closure, found `()`
  --> $DIR/issue-63279.rs:9:11
   |
LL |     || -> Closure { || () }
   |           ^^^^^^^ expected an `FnOnce<()>` closure, found `()`
   |
   = help: the trait `FnOnce<()>` is not implemented for `()`
   = note: wrap the `()` in a closure with no arguments: `|| { /* code */ }`

error[E0308]: mismatched types
  --> $DIR/issue-63279.rs:9:21
   |
LL |     || -> Closure { || () }
   |                     ^^^^^ expected `()`, found closure
   |
   = note: expected unit type `()`
                found closure `[closure@$DIR/issue-63279.rs:9:21: 9:26]`

error[E0308]: mismatched types
  --> $DIR/issue-63279.rs:9:5
   |
LL | type Closure = impl FnOnce();
   |                ------------- the expected opaque type
...
LL |     || -> Closure { || () }
   |     ^^^^^^^^^^^^^^^^^^^^^^^ expected `()`, found closure
   |
   = note: expected opaque type `impl FnOnce()`
                  found closure `[closure@$DIR/issue-63279.rs:9:5: 9:28]`

error: could not find defining uses
  --> $DIR/issue-63279.rs:5:16
   |
LL | type Closure = impl FnOnce();
   |                ^^^^^^^^^^^^^

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
